--- a/static/labs/lab-06-logistic.Rmd
+++ b/static/labs/lab-06-logistic.Rmd
@@ -61,21 +61,9 @@ library(knitr)
 
 ## Data
 
-The data for this lab are from the 2016 General Social Survey. The original data set contains 2867 observations and 935 variables. Given the size of the dataset, we will handle it differently in our workflow than we've handled data in previous assignments. 
+The data for this lab are from the 2016 General Social Survey. The original data set contains 2867 observations and 935 variables. Given the size of the dataset, we'll load it into the R Markdown file from the internet rather than keeping it in the data folder of our RStudio project.
 
-```{marginfigure}
-[Working with large files](https://help.github.com/en/articles/working-with-large-files)
-```
-
-The size of this dataset is 34.3 MB. GitHub will not allow you to push files larger than 100 MB and will give you a warning when you push files as large as 50 MB. Though we could push the file we're working with today to GitHub, it's large enough that we'd still prefer not to. 
-
-You have may noticed that each repo contains a file called `.gitignore`. It contains a list of the files you don't want commit or push to GitHub. If you look at the `.gitignore` file for today's lab, you will notice that `gss2016.csv` is listed at the bottom. 
-
-- Click [**here**](https://sta210-fa20.netlify.app/data/gss2016.csv) to download `gss2016.csv`.
-- Upload `gss2016.csv` into the data folder of your project. 
-- Notice that `gss2016.csv` does not appear in your Git pane. This is because it is being ignored by git, since it is listed in the `.gitignore` file.
-
-You will use the following variables in the lab: 
+We will use the following variables in the lab: 
 
 - `natmass`: Respondent's answer to the following prompt:
 
@@ -92,9 +80,9 @@ You will use the following variables in the lab:
 Use the code below to read in the data.
 
 ```{r eval = F}
-gss <- read_csv("data/gss2016.csv", 
-  na = c("", "Don't know", "No answer", #assign NA if no answer 
-         "Not applicable"),  
+gss <- read_csv("https://sta210-fa20.netlify.app/data/gss2016.csv",
+  na = c("", "Don't know", "No answer", 
+         "Not applicable"), 
          guess_max = 2867) %>%
   select(natmass, age, sex, sei10, region, polviews) %>%
   drop_na()
@@ -116,7 +104,7 @@ Note also that only the variables of interest will be loaded, not the entire dat
 
     Make a plot of the distribution of `polviews`. Which political view occurs most frequently in this data set?
 
-3. Make a plot displaying the relationship between satisfaction with mass transportation spending  and `polviews`. Use the plot to describe the relationship between a person's political views and whether they are satisfied with spending on mass transportation. 
+3. Make a plot displaying the relationship between satisfaction with mass transportation spending  and political views. Use the plot to describe the relationship between a person's political views and whether they are satisfied with spending on mass transportation. 
 
 4. We'd like to use `age` as a quantitative variable in your model; however, it is currently a character data type because some observations are coded as `"89 or older"`. Recode `age` so that is a numeric variable. *Note: Before making the variable numeric, you will need to replace the values `"89 or older"` with a single value.*
 
@@ -126,13 +114,13 @@ Note also that only the variables of interest will be loaded, not the entire dat
 
 6. Let's start by fitting a model using the demographic factors - `age`, `sex`, `sei10`, and `region` - to predict the odds a person is satisfied with spending on mass transportation. Make any necessary adjustments to the variables so the intercept will have a meaningful interpretation.
 
-7. Interpret the intercept in the context of the data.
+7. Interpret the intercept in the context of the data. Include any relevant values in your response.
 
 8. Consider the relationship between age and one's opinion about spending on mass transportation. Interpret the coefficient of age in terms of the **odds** of being satisfied with spending on mass transportation.
 
 9. Now let's see whether a person's political views has a significant impact on their odds of being satisfied with spending on mass transportation, after accounting for the demographic factors. 
 
-  Conduct a drop-in-deviance test to determine if `polviews` is a significant predictor of attitude towards spending on mass transportation. State the null and alternative hypothesis, display all relevant code and output, and state your conclusion in the context of the problem.
+  Conduct a drop-in-deviance test to determine if `polviews` is a significant predictor of attitude towards spending on mass transportation. State the null and alternative hypotheses in words, display all relevant code and output, and state your conclusion in the context of the problem.
 
 10. Use the model the relationship between one's political views and their attitude towards spending on mass transportation. Be sure your answer includes the interpretation of the model coefficients and associated hypothesis tests or confidence intervals used to support your response.
 
@@ -143,8 +131,3 @@ Upload the team's PDF to Gradescope. Be sure to include every team member's name
 
 There should only be **<u>one</u>** submission per team on Gradescope. **Be sure to include every team member's name in the Gradescope submission.**
 
-<hr>
-
-## Acknowledgements
-
-The "Data" section is largely inspired by [datasciencebox.org](https://datasciencebox.org/).
