--- a/public/slides/20-logistic-conditions.Rmd
+++ b/public/slides/20-logistic-conditions.Rmd
@@ -32,7 +32,7 @@ knitr::opts_chunk$set(
 
 class: middle, center
 
-## [Click for PDF of slides](19-logistic-prediction.pdf)
+## [Click for PDF of slides](20-logistic-conditions.pdf)
 
 ```{r,echo=F}
 library(tidyverse)
