--- a/static/labs/peer-review.Rmd
+++ b/static/labs/peer-review.Rmd
@@ -87,7 +87,7 @@ For each question
 - Knit the .Rmd file. Are you able to reproduce all aspects of the report, including output, 
 visualizations, etc? This includes (1) being able to knit the document and (2) obtaining the same PDF as the original PDF. 
 - What questions and/or general feedback do you have for the authors?
-- After giving feedback to this group, what is one thing you want to change or do further work on for your report? 
+- After giving feedback to this group, what is one thing you want to change or continue working on for your report? 
 
 # Submission
 
