--- a/public/quiz/quiz-04.Rmd
+++ b/public/quiz/quiz-04.Rmd
@@ -29,7 +29,7 @@ knitr::opts_chunk$set(echo = TRUE,
 
 - The quiz is open-book, open-note, so you may use any materials from class (except other people!) as you take the quiz. 
 
-- Write your responses using a Word processor (e.g.  Word, Pages, Google Docs, etc.). You do **<u>not</u>** have to use RStudio/R Markdown for any part of this quiz. **Your quiz submission should be no more than 1 page single-spaced. Any content over 1 page will <u>not</u> be considered for grading.** 
+- Write your responses using a Word processor (e.g.  Word, Pages, Google Docs, etc.). You do **<u>not</u>** need to use RStudio/R Markdown or conduct analysis for any part of this quiz. **Your quiz submission should be no more than 1 page single-spaced. Any content over 1 page will <u>not</u> be considered for grading.** 
 
 
 ## Scenario  
@@ -46,7 +46,7 @@ You can find a full list of the variables in the data set at the bottom of the i
 
 Answer the questions below describing how you would approach the regression analysis. For each question, in addition to stating the choice(s) you would make, include a brief explanation about why you've made the choice(s). Your responses should demonstrate your knowledge of the statistical concepts and how they applies in a real world scenario.
 
-Type your responses to the questions below using any word processor (e.g.  Word, Pages, Google Docs, etc.). Include your name at the top of the document. You do **<u>not</u>** have to use R/R Markdown for any part of this quiz. **Your quiz submission should be no more than 1 page single-spaced. Any content over 1 page will <u>not</u> be considered for grading.** 
+Type your responses to the questions below using any word processor (e.g.  Word, Pages, Google Docs, etc.). Include your name at the top of the document. You do **<u>not</u>** need to use R/R Markdown or conduct analysis for any part of this quiz. **Your quiz submission should be no more than 1 page single-spaced. Any content over 1 page will <u>not</u> be considered for grading.** 
 
 **Question 1 (5pt)** What type of model would you use for this analysis? Explain your choice.
 
