--- a/static/appex/ae-26-communication.Rmd
+++ b/static/appex/ae-26-communication.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Communicating results"
+title: "Project info + presenting results"
 date: "`r Sys.Date()`"
 output: 
   html_document: 
