update piazza statement

--- a/public/syllabus/sta210-sp21-syllabus.tex
+++ b/public/syllabus/sta210-sp21-syllabus.tex
@@ -241,9 +241,14 @@ regularly to ensure you have up-to-date information about the course.
 \textbf{Online communication}
 
 If you have general questions about the course logistics, content, or
-assignments, you may post them on the online discussion platform. Note
-that this forum should only be used for questions or comments that may
-be viewed by the entire class.
+assignments, you may post them on the online discussion platform Piazza.
+Note that this forum should only be used for questions or comments that
+may be viewed by the entire class.
+
+Piazza is accessible through the course page by clicking on the Piazza
+link on the top of course webpage or through Sakai. Note that it may ask
+you to make a financial contribution. You are \textbf{not} required to
+make a contribution participate in the class discussion on Piazza.
 
 \textbf{Email}
 
