--- a/public/syllabus/sta210-sp21-syllabus.tex
+++ b/public/syllabus/sta210-sp21-syllabus.tex
@@ -36,7 +36,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
-  pdftitle={Syllabus},
+  pdftitle={STA 210 Syllabus},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
@@ -68,15 +68,64 @@
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 \setcounter{secnumdepth}{-\maxdimen} % remove section numbering
 
-\title{Syllabus}
+\title{STA 210 Syllabus}
+\usepackage{etoolbox}
+\makeatletter
+\providecommand{\subtitle}[1]{% add subtitle to \maketitle
+  \apptocmd{\@title}{\par {\large #1 \par}}{}{}
+}
+\makeatother
+\subtitle{Spring 2021}
 \author{}
 \date{\vspace{-2.5em}}
 
 \begin{document}
 \maketitle
 
-\textbf{\href{sta210-sp21-syllabus.pdf}{Click here} to download a PDF
-copy of the syllabus.}
+\hypertarget{teaching-team}{%
+\subsection{Teaching Team}\label{teaching-team}}
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+\endhead
+Instructor & Prof.~Maria Tackett &
+\href{mailto:maria.tackett@duke.edu}{\nolinkurl{maria.tackett@duke.edu}}\tabularnewline
+TAs & Martha Aboagye &
+\href{mailto:martha.aboagye@duke.edu}{\nolinkurl{martha.aboagye@duke.edu}}\tabularnewline
+& Betsy Bersson &
+\href{mailto:elizabeth.berrson@duke.edu}{\nolinkurl{elizabeth.berrson@duke.edu}}\tabularnewline
+& Meredith Brown &
+\href{mailto:meredith.brown@duke.edu}{\nolinkurl{meredith.brown@duke.edu}}\tabularnewline
+& Cody Coombs &
+\href{mailto:cody.coombs@duke.edu}{\nolinkurl{cody.coombs@duke.edu}}\tabularnewline
+& Sophie Dalldorf &
+\href{mailto:sophia.dalldorf@duke.edu}{\nolinkurl{sophia.dalldorf@duke.edu}}\tabularnewline
+& Joseph Lawson &
+\href{mailto:joseph.lawson@duke.edu}{\nolinkurl{joseph.lawson@duke.edu}}\tabularnewline
+& Ezinne Nwankwo &
+\href{mailto:ezinne.nwankwo@duke.edu}{\nolinkurl{ezinne.nwankwo@duke.edu}}\tabularnewline
+& Sophie Riegel &
+\href{mailto:sophie.riegel@duke.edu}{\nolinkurl{sophie.riegel@duke.edu}}\tabularnewline
+R Support TA & George Lindner &
+\href{mailto:george.lindner@duke.edu}{\nolinkurl{george.lindner@duke.edu}}\tabularnewline
+\bottomrule
+\end{longtable}
+
+\hypertarget{class-meetings}{%
+\subsection{Class meetings}\label{class-meetings}}
+
+\textbf{See Sakai for Zoom links to all class meetings.}
+
+\begin{longtable}[]{@{}lll@{}}
+\toprule
+\endhead
+Lecture & All students & Tue and Thur 10:15a - 11:30a EST\tabularnewline
+Labs & Lab 01L & Mon 12p - 1:15p\tabularnewline
+& Lab 02L & Mon 1:45p - 3p\tabularnewline
+& Lab 03L & Mon 5:15p - 6:30p\tabularnewline
+& Asynchronous &\tabularnewline
+\bottomrule
+\end{longtable}
 
 \hypertarget{course-learning-objectives}{%
 \subsection{Course learning
