--- a/static/appex/ae-02-bikeshare.Rmd
+++ b/static/appex/ae-02-bikeshare.Rmd
@@ -50,10 +50,12 @@ library(tidyverse)
 
 - From [UCI Machine Learning Repository - Bike Sharing Dataset](http://archive.ics.uci.edu/ml/datasets/Bike+Sharing+Dataset)
 
-## Exercises
+## Exercises (~ 15 minutes)
 
 - Go to the [STA 210 course organization](https://www.github.com/sta210-sp21) on GitHub.
 
 - Clone the **ae-02-** repo and start a new project in RStudio.
 
-- Be sure to push your changes periodically as you work on the AE.
+- Be sure to push your changes periodically as you work on the AE. 
+
+- Write your breakout room's answer on the Google Slide. Link will be posted in chat.
